- updated for functionality of showing "no search results" result

--- a/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
+++ b/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
@@ -15,7 +15,7 @@
           formControlName="expenseDate"
         />
         @if(formControlHasError(form.controls.expenseDate)){
-			{{updateFormControlErrorLabelHTML(form.controls.expenseDescription)}}
+        {{ updateFormControlErrorLabelHTML(form.controls.expenseDescription) }}
         <label class="error-label" id="errorLabel_expenseDate"></label>
         }
       </div>
@@ -33,7 +33,7 @@
           formControlName="expenseDescription"
         />
         @if(formControlHasError(form.controls.expenseDescription)){
-        {{updateFormControlErrorLabelHTML(form.controls.expenseDescription)}}
+        {{ updateFormControlErrorLabelHTML(form.controls.expenseDescription) }}
         <label class="error-label" id="errorLabel_expenseDescription"></label>
         }
       </div>
@@ -51,7 +51,7 @@
           formControlName="expenseAmount"
         />
         @if(formControlHasError(form.controls.expenseAmount)){
-        {{updateFormControlErrorLabelHTML(form.controls.expenseAmount)}}
+        {{ updateFormControlErrorLabelHTML(form.controls.expenseAmount) }}
         <label class="error-label" id="errorLabel_expenseAmount"></label>
         }
       </div>
@@ -81,7 +81,7 @@
           finance-app-autocomplete-search-element="expenseTypeName"
         >
           @for(currentExpenseType of search_expenseTypeResults(); track
-          currentExpenseType){
+          currentExpenseType){ @if(currentExpenseType.expenseTypeID !== 0){
           <div
             class="autocomplete-result-item"
             id="expenseTypeSearchResult_{{ currentExpenseType.expenseTypeID }}"
@@ -89,14 +89,17 @@
           >
             {{ currentExpenseType.expenseTypeName }}
           </div>
-          }
+          } @else {
+          <div class="search-result-empty" disabled="disabled" (click)="hideElement('searchResults_ExpenseType')">
+            --- No Search Results ---
+          </div>
+          } }
         </div>
         @if(formControlHasError(form.controls.expenseTypeName)){
-        {{updateFormControlErrorLabelHTML(form.controls.expenseTypeName)}}
+        {{ updateFormControlErrorLabelHTML(form.controls.expenseTypeName) }}
         <label class="error-label" id="errorLabel_expenseTypeName"></label>
-        }
-		@if(formControlHasError(form.controls.expenseTypeID)){
-        {{updateFormControlErrorLabelHTML(form.controls.expenseTypeID)}}
+        } @if(formControlHasError(form.controls.expenseTypeID)){
+        {{ updateFormControlErrorLabelHTML(form.controls.expenseTypeID) }}
         <label class="error-label" id="errorLabel_expenseTypeID"></label>
         }
       </div>
@@ -140,11 +143,10 @@
           }
         </div>
         @if(formControlHasError(form.controls.paymentTypeName)){
-        {{updateFormControlErrorLabelHTML(form.controls.paymentTypeName)}}
+        {{ updateFormControlErrorLabelHTML(form.controls.paymentTypeName) }}
         <label class="error-label" id="errorLabel_paymentTypeName"></label>
-        }
-		@if(formControlHasError(form.controls.paymentTypeID)){
-        {{updateFormControlErrorLabelHTML(form.controls.paymentTypeID)}}
+        } @if(formControlHasError(form.controls.paymentTypeID)){
+        {{ updateFormControlErrorLabelHTML(form.controls.paymentTypeID) }}
         <label class="error-label" id="errorLabel_paymentTypeID"></label>
         }
       </div>
