- updated to utilize a method for show/hide of HTML element. - formatted files

--- a/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
+++ b/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
@@ -90,7 +90,11 @@
             {{ currentExpenseType.expenseTypeName }}
           </div>
           } @else {
-          <div class="search-result-empty" disabled="disabled" (click)="hideElement('searchResults_ExpenseType')">
+          <div
+            class="search-result-empty"
+            disabled="disabled"
+            (click)="hideElement('searchResults_ExpenseType')"
+          >
             --- No Search Results ---
           </div>
           } }
