fixed issue of "onBlur" for search results disappearing ALSO happening when trying to select the expense type we wanted to use.

--- a/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
+++ b/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
@@ -68,6 +68,7 @@
           name="expenseTypeName"
           formControlName="expenseTypeName"
           (keyup)="search_expenseTypes()"
+		  (blur)="hideElementOnBlur('searchResults_ExpenseType')"
         />
         <input
           type="hidden"
