updated from innerhtml to "title" attribute for grabbing expenseTypeName for form field

--- a/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
+++ b/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
@@ -86,6 +86,7 @@
           <div
             class="autocomplete-result-item"
             id="expenseTypeSearchResult_{{ currentExpenseType.expenseTypeID }}"
+			title="{{currentExpenseType.expenseTypeName}}"
             (click)="click_expenseTypeResult(currentExpenseType.expenseTypeID)"
           >
             {{ currentExpenseType.expenseTypeName }}
