updated information on roadmap for the application

--- a/frontend/src/app/about/about.component.html
+++ b/frontend/src/app/about/about.component.html
@@ -1,11 +1,10 @@
 <p>
-  Nothing here yet - we will have a financial app here that can do the
-  following:
+	Feature List:
 </p>
 <ul>
   <li>Multiple users with login page</li>
   <li>
-    CRUD operations for financial line items including:
+    CRUD operations (<span class="text-strikethrough">Create, Read, Delete</span>, and Edit) for financial line items including:
     <ul>
       <li>Expense Date</li>
       <li>Expense Description</li>
@@ -19,5 +18,4 @@
   <li>Yearly rollup</li>
   <li>Excel export</li>
   <li>Excel import</li>
-  <li>And more!</li>
 </ul>
