added in modal for "edit expense" and got routing working to open the modal

--- a/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-routing.component.html
+++ b/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-routing.component.html
@@ -4,3 +4,6 @@
 @else if (inputData.expenseState === getCrudStates().delete) {
 	<app-expense-dialog-delete [expenseData]="inputData.expenseData"/>
 }
+@else if (inputData.expenseState === getCrudStates().update){
+	<app-expense-dialog-edit [expenseData]="inputData.expenseData"/>
+}
