- Changed button text from "Add" to "Add Expense" - Fixed "Add Expense" button spacing

--- a/frontend/src/app/finances/finances.component.html
+++ b/frontend/src/app/finances/finances.component.html
@@ -1,4 +1,4 @@
-<p><button mat-flat-button (click)="openAddExpenseModal()">Add</button></p>
+<p><button class="top-margin-spacing" mat-flat-button (click)="openAddExpenseModal()">Add Expense</button></p>
 
 
 <table
