--- a/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-edit/expense-dialog-edit.component.html
+++ b/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-edit/expense-dialog-edit.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Edit "_____ExpenseDescription_____"</h2>
+<h2 mat-dialog-title>Edit {{this.expenseData().expenseDescription}}</h2>
 <mat-dialog-content class="mat-typography">
   <div>
     Testing Edit Dialog Display
