updated title of "expense edit" modal

--- a/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-edit/expense-dialog-edit.component.html
+++ b/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-edit/expense-dialog-edit.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Edit {{this.expenseData().expenseDescription}}</h2>
+<h2 mat-dialog-title>Edit Expense "{{this.expenseData().expenseDescription}}"</h2>
 <mat-dialog-content class="mat-typography">
   <div>
     <form [formGroup]="form" class="form-flex-column">
