--- a/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
+++ b/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
@@ -57,8 +57,8 @@
       </div>
 
       <!-- Expense Type Name -->
-      <div formGroupName="expenseType" class="top-margin-spacing">
-        <div class="control form-group-div">
+      <div formGroupName="expenseType">
+        <div>
           <label for="expenseTypeName" class="input-label-modal">
             Expense Type :
           </label>
@@ -125,8 +125,8 @@
         </div>
       </div>
       <!-- Payment Type Name -->
-      <div formGroupName="paymentType" class="top-margin-spacing">
-        <div class="control form-group-div">
+      <div formGroupName="paymentType">
+        <div>
           <label
             for="paymentTypeName"
             class="input-label-modal top-margin-spacing"
