--- a/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
+++ b/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
@@ -69,7 +69,7 @@
             name="expenseTypeName"
             formControlName="expenseTypeName"
             (keyup)="search_expenseTypes()"
-            (blur)="hideElementOnBlur('searchResults_ExpenseType')"
+			(blur)="selectFromListIfMatched('expenseType', 'expenseTypeName')"
           />
           <input
             type="hidden"
@@ -79,7 +79,7 @@
           />
           <div
             class="autocomplete-results autocomplete-results-modal hidden-element"
-            id="searchResults_ExpenseType"
+            id="searchResults_expenseType"
             finance-app-autocomplete-search-element="expenseTypeName"
           >
             @for(currentExpenseType of search_expenseTypeResults(); track
@@ -89,6 +89,7 @@
               id="expenseTypeSearchResult_{{
                 currentExpenseType.expenseTypeID
               }}"
+			  data-searchResultItemType="expenseType"
               title="{{ currentExpenseType.expenseTypeName }}"
               (click)="
                 click_expenseTypeResult(currentExpenseType.expenseTypeID)
@@ -100,7 +101,7 @@
             <div
               class="search-result-empty"
               disabled="disabled"
-              (click)="hideElement('searchResults_ExpenseType')"
+              (click)="hideElement('searchResults_expenseType')"
             >
               --- No Search Results ---
             </div>
