--- a/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
+++ b/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
@@ -141,6 +141,7 @@
             name="paymentTypeName"
             formControlName="paymentTypeName"
             (keyup)="search_paymentTypes()"
+			(blur)="selectFromListIfMatched('paymentType', 'paymentTypeName')"
           />
           <input
             type="hidden"
@@ -158,7 +159,7 @@
           />
           <div
             class="autocomplete-results autocomplete-results-modal hidden-element"
-            id="searchResults_PaymentType"
+            id="searchResults_paymentType"
             finance-app-autocomplete-search-element="paymentTypeName"
           >
             @for(currentPaymentType of search_paymentTypeResults(); track
@@ -169,6 +170,7 @@
                 currentPaymentType.paymentTypeID
               }}"
               title="{{ currentPaymentType.paymentTypeName }}"
+			  data-searchResultItemType="paymentType"
               (click)="
                 click_paymentTypeResult(
                   currentPaymentType.paymentTypeID,
@@ -183,7 +185,7 @@
             <div
               class="search-result-empty"
               disabled="disabled"
-              (click)="hideElement('searchResults_PaymentType')"
+              (click)="hideElement('searchResults_paymentType')"
             >
               --- No Search Results ---
             </div>
